# advent2025

./: README.md  advent2025.cabal
1/: main.hs
2/: main.hs
3/: main.hs
4/: main.hs
common/: Parsing.hs
