cabal-version:   3.8
name:            advent2025
version:         0.1.0.0
license:         NONE
author:          12800443+twiggler@users.noreply.github.com
maintainer:      Roel de Jong
build-type:      Simple
extra-doc-files: README.md

common base-settings
    ghc-options: -Wall
    build-depends: base ^>=4.20.2.0,
                   megaparsec ^>=9.7.0,
                   text ^>=2.1.1 

    default-extensions: ImportQualifiedPost, DeriveFunctor, FlexibleInstances, TupleSections
    default-language: Haskell2010

library
    import:           base-settings
    exposed-modules:  Parsing, 
    hs-source-dirs:   common

executable 1
    import:           base-settings
    main-is:          main.hs
    build-depends:    advent2025
    hs-source-dirs:   1

executable 2
    import:           base-settings
    main-is:          main.hs
    build-depends:    integer-logarithms ^>=1.0.4,
                      containers ^>=0.7,
                      advent2025
    hs-source-dirs:   2

executable 3
    import:           base-settings
    main-is:          main.hs
    build-depends:    vector ^>=0.13.2,
                      advent2025
    hs-source-dirs:   3

executable 4
    import:           base-settings
    main-is:          main.hs
    build-depends:    unordered-containers ^>=0.2.20.1,
                      psqueues ^>=0.2.8.2,
                      advent2025
    hs-source-dirs:   4
